--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             <span></span>
         </label>
         <label for="menu-toggle" class="backdrop"></label>
-    </div>
-</div>
+    </div><div class="animate-text"><a>Merabalar,Ewagewg Sitesine Hoşgeldiniz,<br>Daha fazla detay için aşşağıya kaydırınız.</a></div>
+<div class="hiza"><img src="down-arrow (1).png"alt="ewgw"></div></div>
 <nav class="menu">
     <ul>
         <li>
             <a href="#">Hakkımda</a>
         </li>
         <li>
-            <a href="#">Buluşma<br>Saati</a>
+            <a href="#">Ewagewg<br>Saati</a>
         </li>
 		<li>
 		<a href="#gt">Giriş</a>
@@ -30,6 +30,7 @@
     </ul>
 </nav>
  </body>
+ 
  <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
 <script src="script.js"></script>
 </html>
